force-app/main/default/objects/Non_Profit__c/Non_Profit__c.object-meta.xml
<CustomObject>
    <label>Non Profit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Profits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>