force-app/main/default/objects/Non_Profit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcctId</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Non_Profits</relationshipName>
    <type>Lookup</type>
</CustomField>