force-app/main/default/objects/Non_Profit__c/fields/contactemail__c.field-meta.xml
<CustomField>
    <fullName>contactemail__c</fullName>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>