force-app/main/default/objects/Non_Profit__c/fields/contactname__c.field-meta.xml
<CustomField>
    <fullName>contactname__c</fullName>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>