force-app/main/default/objects/Non_Profit__c/fields/contactphone__c.field-meta.xml
<CustomField>
    <fullName>contactphone__c</fullName>
    <label>Contact Phone</label>
    <length>18</length>
    <type>Text</type>
</CustomField>